fix(ui): add margins and column spacing to resource label form

--- a/ui/src/configuration/components/RandomLabelColor.scss
+++ b/ui/src/configuration/components/RandomLabelColor.scss
@@ -8,8 +8,10 @@
 .random-color--button {
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-bottom: $ix-marg-b;
 
     .label-colors--swatch {
-        margin-right: 12px;
+        margin-right: $ix-marg-c;
     }
 }
